<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Vista.LoginView.LoginView.VistaLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lblHola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/findmypet"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/logoImagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logo_nuevo2"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#FFFFFF"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/tituloCorreo"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:background="#FFFFFF"
                android:drawableLeft="@android:drawable/ic_secure"
                android:drawablePadding="10dp"
                android:hint="@string/tituloPass"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnaccedersistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/btnAcceder"

                />

            <Button
                android:id="@+id/btnRegistrarSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/btRegistrar" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>