<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="2dp"
    android:orientation="vertical"
    app:cardElevation="2dp"
    tools:context=".VistaItemFound">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAnimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:contentDescription="@string/animalphoto"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/perro1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/imageIzquierdaCorazon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon1"
                app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

            <ImageView
                android:id="@+id/imageCentroMano"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon2"
                app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

            <ImageView
                android:id="@+id/imageDerechaUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon3"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/textview" />

        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTipoPublicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#75FFFFFF"
            android:maxLines="1"
            android:text="Se busca"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#75FFFFFF"
            android:maxLines="1"
            android:text="@string/textview"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
</androidx.cardview.widget.CardView>